fix: status bar dark mode

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -14,6 +14,7 @@
 @import 'additional-styles/theme.css';
 
 html {
+  @apply dark:bg-gray-900;
   padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
